# intellihubpoc

./: .gitignore  README.md  main.py  pyproject.toml  pyproject.toml.bak
configs/: app_config.yaml  aws_config.yaml  azure_config.yaml  sor_analysis_config.yaml
debug_prompts/: MeterConsolidationE4_WO-EAC2505021264593_20250918_113030.txt  MeterConsolidationE4_WO-EAC2505061270346_20250918_113029.txt  MeterConsolidationE4_WO-EEA2502161136534_20250918_113029.txt  MeterConsolidationE4_WO-EEA2502281158698_20250918_113031.txt  MeterConsolidationE4_WO-EEA2503091174918_20250918_113031.txt  MeterConsolidationE4_WO-EEA2503191192892_20250918_113040.txt  MeterConsolidationE4_WO-EEA2504011216515_20250918_113039.txt  MeterConsolidationE4_WO-EEA2504051225378_20250918_113038.txt  MeterConsolidationE4_WO-EEA2504051225834_20250918_113039.txt  MeterConsolidationE4_WO-EEA2504051225884_20250918_113039.txt  MeterConsolidationE4_WO-EEA2504051226033_20250918_113045.txt  MeterConsolidationE4_WO-EEA2504051226043_20250918_113046.txt  MeterConsolidationE4_WO-EEA2504051226062_20250918_113045.txt  MeterConsolidationE4_WO-EEA2504051226151_20250918_113045.txt  MeterConsolidationE4_WO-EEA2504151242474_20250918_113046.txt  MeterConsolidationE4_WO-EEA2505021265201_20250918_113051.txt  MeterConsolidationE4_WO-EEA2505091277035_20250918_113053.txt  MeterConsolidationE4_WO-EEA2505091277291_20250918_113053.txt  MeterConsolidationE4_WO-EEA2505091277365_20250918_113053.txt  MeterConsolidationE4_WO-EEA2505091277830_20250918_113052.txt  MeterConsolidationE4_WO-EEA2505101278981_20250918_113100.txt  (+14 more)
(+154 files in other folders)
