[project]
name = "intellihubsorpoc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3>=1.40.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyyaml>=6.0.2",
    # Azure OpenAI dependencies
    "azure-identity>=1.15.0",
    "azure-keyvault-secrets>=4.7.0",
    "openai>=1.0.0",
]
[tool.uv]
allow-insecure-host = ["pypi.org", "files.pythonhosted.org"]
